Fixed borders + width on iPhones + no sending message if text empty

--- a/app/assets/stylesheets/partials/_home.css.scss
+++ b/app/assets/stylesheets/partials/_home.css.scss
@@ -24,6 +24,7 @@ body.home-index {
     ul {
       list-style-type:none;
       margin-left: 0;
+      border-top: 1px solid #eee;
       li {
         border: 1px solid #ddd;
         border-top: 1px solid #fff;
